# simple_object_recognition_demo

./: .gitignore  README.md
object_recognition/: CMakeLists.txt  package.xml
object_recognition/action/: ObjectRecognition.action
object_recognition/data/training/images/barcelona_box/: data.csv
object_recognition/data/training/images/blue_box/: data.csv
object_recognition/data/training/images/blue_cup/: data.csv
object_recognition/data/training/images/brown_cup/: data.csv
object_recognition/data/training/images/cloth/: data.csv
object_recognition/data/training/images/infinite_money_bowl/: data.csv
object_recognition/data/training/images/pilot/: data.csv
object_recognition/data/training/images/plant_pot/: data.csv
object_recognition/launch/: demo.launch
object_recognition/msg/: Object.msg
object_recognition/scripts/: gather_data.py  gpu_setting.py  object_recognition_server.py  roi.py  show_data.py  test_object_recognition.py  train.py
perception/: CMakeLists.txt  README.md  package.xml
perception/include/perception/: perception.h
perception/msg/: Area.msg  BoundingBox.msg  FilterOptions.msg  ROI.msg
perception/src/: perception.cpp  perception_find_bounding_box.cpp  perception_find_rois.cpp  perception_node.cpp  perception_point_cloud_function.cpp  perception_service.cpp
perception/srv/: FindBoundingBox.srv  FindROIs.srv
transform_calibrator/: CMakeLists.txt  README.md  package.xml
transform_calibrator/launch/: static_transform.launch
transform_calibrator/scripts/: transform_calibrator_node.py
(+4 files in other folders)
